--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -25,12 +25,12 @@
           <h3 class="mt-2 text-center text-lg font-bold tracking-tight text-gray-900"> Or Create an Account: </h3>
           <%= form_tag student_create_account_path, :class => 'mt-8 space-y-6' do %>
               <div class="-space-y-px rounded-md shadow-sm">
-                  <%= label :student, :name, 'Name?', :class => 'sr-only' %>
-                  <%= text_field :student, :name, :placeholder => "Name", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
-                  <%= label :student, :uni, 'UNI?', :class => 'sr-only' %>
-                  <%= text_field :student, :uni, :placeholder => "UNI", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
-                  <%= label :student, :password, 'Password?', :class => 'sr-only' %>
-                  <%= text_field :student, :password, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                  <%= label :create_student, :name, 'Name?', :class => 'sr-only' %>
+                  <%= text_field :create_student, :name, :placeholder => "Name", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                  <%= label :create_student, :uni, 'UNI?', :class => 'sr-only' %>
+                  <%= text_field :create_student, :uni, :placeholder => "UNI", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                  <%= label :create_student, :password, 'Password?', :class => 'sr-only' %>
+                  <%= text_field :create_student, :password, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
               </div>
               <br/>
               <%= submit_tag 'Create Student Account', :class => 'group relative flex w-full justify-center rounded-md border border-transparent bg-blue-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
