--- a/app/views/pages/organizer_login.html.erb
+++ b/app/views/pages/organizer_login.html.erb
@@ -13,7 +13,7 @@
                 <%= label :organization, :email, 'Org Email', :class => 'sr-only' %>
                 <%= text_field :organization, :email, :placeholder => "Email", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
                 <%= label :organization, :password, 'Org Password', :class => 'sr-only' %>
-                <%= text_field :organization, :password, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                <%= password_field_tag "organization[password]", nil, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500' %>
             </div>
             <br/>
             <%= submit_tag 'Organization Login', :class => 'group relative flex w-full justify-center rounded-md border border-transparent bg-blue-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
@@ -30,7 +30,7 @@
                 <%= label :create_organization, :email, 'Org Email?', :class => 'sr-only' %>
                 <%= text_field :create_organization, :email, :placeholder => "Email", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
                 <%= label :create_organization, :password, 'Org Password?', :class => 'sr-only' %>
-                <%= text_field :create_organization, :password, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                <%= password_field_tag "create_organization[password]", nil, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500' %>
             </div>
             <br/>
             <%= submit_tag 'Create Organizer Account', :class => 'group relative flex w-full justify-center rounded-md border border-transparent bg-blue-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2' %>
