changed uni to student email across the board

--- a/app/views/pages/student_login.html.erb
+++ b/app/views/pages/student_login.html.erb
@@ -11,7 +11,7 @@
                   <%= label :student, :name, 'Name', :class => 'sr-only' %>
                   <%= text_field :student, :name, :placeholder => "Name", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
                   <%= label :student, :uni, 'UNI', :class => 'sr-only' %>
-                  <%= text_field :student, :uni, :placeholder => "UNI", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                  <%= text_field :student, :uni, :placeholder => "Columbia University Email", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
                   <%= label :student, :password, 'Password', :class => 'sr-only' %>
                   <%= password_field_tag "student[password]", nil, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500' %>
               </div>
@@ -28,7 +28,7 @@
                   <%= label :create_student, :name, 'Name?', :class => 'sr-only' %>
                   <%= text_field :create_student, :name, :placeholder => "Name", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
                   <%= label :create_student, :uni, 'UNI?', :class => 'sr-only' %>
-                  <%= text_field :create_student, :uni, :placeholder => "UNI", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
+                  <%= text_field :create_student, :uni, :placeholder => "Columbia University Email", :class => 'relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm' %>
                   <%= label :create_student, :password, 'Password?', :class => 'sr-only' %>
                   <%= password_field_tag "create_student[password]", nil, :placeholder => "Password", :class => 'relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500' %>
               </div>
