--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -36,7 +36,7 @@
             <%= event.name %>
           </th>
           <td class="py-4 px-6">
-            <%= event.datetime.strftime("%I:%M %p on %m/%d/%Y") %>
+            <%= event.datetime %>
           </td>
           <td class="py-4 px-6">
             <%= event.location %>
